[gd_scene load_steps=9 format=2]

[ext_resource path="res://Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/click1.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/fonts/NotoSansJP-Med_52.tres" type="DynamicFont" id=4]
[ext_resource path="res://Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/NotoSansJP-Med_30.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 400.0
margin_bottom = 768.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 100.0
custom_constants/margin_top = 100

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 400.0
margin_bottom = 250.0
focus_mode = 2
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.152941, 0.364706, 0.443137, 1 )
custom_colors/selection_color = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_color_selected = Color( 0.152941, 0.364706, 0.443137, 1 )
bbcode_enabled = true
bbcode_text = "[center]日本語[/center]"
visible_characters = 3
meta_underlined = false
tab_size = 3
text = "日本語"
fit_content_height = true
scroll_active = false
selection_enabled = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 400.0
margin_bottom = 298.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.152941, 0.364706, 0.443137, 1 )
text = "Learn Japanese"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 400.0
margin_bottom = 382.0
custom_constants/margin_top = 80

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 386.0
margin_right = 400.0
margin_bottom = 646.0

[node name="middle" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 400.0
margin_bottom = 260.0
size_flags_horizontal = 7
size_flags_vertical = 0
custom_constants/separation = 10

[node name="StudyButton" parent="MarginContainer/VBoxContainer/HBoxContainer/middle" instance=ExtResource( 1 )]
margin_right = 400.0
margin_bottom = 80.0
focus_mode = 0
enabled_focus_mode = 0
text = "KANJI"

[node name="VocabularyButton" parent="MarginContainer/VBoxContainer/HBoxContainer/middle" instance=ExtResource( 1 )]
margin_top = 90.0
margin_right = 400.0
margin_bottom = 170.0
focus_mode = 0
enabled_focus_mode = 0
text = "WORDS"

[node name="OptionsButton" parent="MarginContainer/VBoxContainer/HBoxContainer/middle" instance=ExtResource( 1 )]
margin_top = 180.0
margin_right = 400.0
margin_bottom = 260.0
focus_mode = 0
enabled_focus_mode = 0
text = "OPTIONS"

[node name="ExitButton" parent="MarginContainer/VBoxContainer/HBoxContainer/middle" instance=ExtResource( 1 )]
visible = false
margin_top = 330.0
margin_right = 400.0
margin_bottom = 410.0
focus_mode = 0
enabled_focus_mode = 0
text = "EXIT"
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/middle/StudyButton" to="." method="_on_StudyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/middle/VocabularyButton" to="." method="_on_VocabularyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/middle/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/middle/ExitButton" to="." method="_on_ExitButton_pressed"]
